video/custom-player/ingress-wildcard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: player
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: player.AUTOMATIC_REPLACE.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: player
            port:
              name: http
